CHATS_SIT/force-app/main/default/objects/sfsit_t_paymt_hist__x.object
<CustomObject>
    <description>sfsit$t_paymt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_paymt_hist</externalName>
    <fields>
        <fullName>amt_pmt__c</fullName>
        <description>amt_pmt</description>
        <externalDeveloperName>amt_pmt</externalDeveloperName>
        <label>Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_pmt_slots_cntrct__c</fullName>
        <description>amt_pmt_slots_cntrct</description>
        <externalDeveloperName>amt_pmt_slots_cntrct</externalDeveloperName>
        <label>Payment Amount for slot contract</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_pmt_sub__c</fullName>
        <description>amt_pmt_sub</description>
        <externalDeveloperName>amt_pmt_sub</externalDeveloperName>
        <label>Sub payment amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_county__c</fullName>
        <description>cde_county</description>
        <externalDeveloperName>cde_county</externalDeveloperName>
        <label>County Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_method_pmt__c</fullName>
        <description>cde_method_pmt</description>
        <externalDeveloperName>cde_method_pmt</externalDeveloperName>
        <label>Payment Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_pmt__c</fullName>
        <description>cde_status_pmt</description>
        <externalDeveloperName>cde_status_pmt</externalDeveloperName>
        <label>Payment Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_paid_pmt__c</fullName>
        <description>dte_paid_pmt</description>
        <externalDeveloperName>dte_paid_pmt</externalDeveloperName>
        <label>Payment Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_period_serv__c</fullName>
        <description>idn_period_serv</description>
        <externalDeveloperName>idn_period_serv</externalDeveloperName>
        <label>Service Period Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_pmt__c</fullName>
        <description>idn_pmt</description>
        <externalDeveloperName>idn_pmt</externalDeveloperName>
        <label>Payment Id</label>
        <length>50</length>
        <referenceTargetField>T_PAYMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PAYMT__c</referenceTo>
        <relationshipLabel>Payment Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_paymt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_hist__c</fullName>
        <description>idn_pmt_hist</description>
        <externalDeveloperName>idn_pmt_hist</externalDeveloperName>
        <label>Payment History Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_paymt_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment History</label>
    <pluralLabel>Payment History</pluralLabel>
</CustomObject>